--- a/apps/angular/e-commerce/e-commerce/src/app/app.component.html
+++ b/apps/angular/e-commerce/e-commerce/src/app/app.component.html
@@ -1,1 +1,3 @@
-<expnx-nx-welcome></expnx-nx-welcome> <router-outlet></router-outlet>
+<expnx-main-nav>
+  <router-outlet></router-outlet>
+</expnx-main-nav>
