--- a/libs/angular/e-commerce/feature/product/src/lib/product/product.component.scss
+++ b/libs/angular/e-commerce/feature/product/src/lib/product/product.component.scss
@@ -6,3 +6,40 @@
   background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
   background-size: cover;
 }
+
+.products-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  gap: 20px;
+  justify-items: center;
+  justify-content: space-evenly;
+  align-items: stretch;
+  padding: 20px;
+}
+
+.product-item {
+  width: 100%;
+  max-width: 400px;
+  height: 100%;
+}
+
+.example-card img {
+  width: minmax(100%, 950px);
+  height: auto;
+  margin: auto;
+}
+
+.example-card {
+  width: 100%;
+  height: 100%;
+}
+
+.example-header-image {
+  width: 64px;
+  height: 64px;
+  border-radius: 50%;
+}
+
+.mat-card-actions {
+  margin-top: auto;
+}
