--- a/libs/angular/e-commerce/feature/product/src/lib/product/product.component.scss
+++ b/libs/angular/e-commerce/feature/product/src/lib/product/product.component.scss
@@ -1,12 +1,3 @@
-.example-card {
-  max-width: 400px;
-}
-
-.example-header-image {
-  background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
-  background-size: cover;
-}
-
 .products-container {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
@@ -24,7 +15,7 @@
 }
 
 .example-card img {
-  width: minmax(100%, 950px);
+  width: 100%;
   height: auto;
   margin: auto;
 }
@@ -40,6 +31,30 @@
   border-radius: 50%;
 }
 
-.mat-card-actions {
+.header {
   margin-top: auto;
+}
+
+.image-container {
+  width: 100%;
+  height: 200px; /* Set desired height */
+  overflow: hidden; /* Ensure image does not overflow */
+}
+
+.product-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* Cover the entire container */
+}
+
+.description-container {
+  height: 80px; /* Set the desired fixed height for the description container */
+  overflow: hidden; /* Hide any overflow */
+}
+
+.product-description {
+  margin: 0; /* Remove any default margins */
+  overflow: hidden; /* Hide any overflow */
+  text-overflow: ellipsis; /* Display an ellipsis (...) to indicate truncated text */
+  // white-space: nowrap; /* Prevent wrapping */
 }
