--- a/apps/angular/e-commerce/e-commerce/src/app/main-nav/main-nav.component.html
+++ b/apps/angular/e-commerce/e-commerce/src/app/main-nav/main-nav.component.html
@@ -11,9 +11,9 @@
     <mat-nav-list>
       <a mat-list-item [routerLink]="['product']">All Products</a>
       @for (cat of categories$ | async; track cat) {
-      <a mat-list-item [routerLink]="['product', cat]">{{ cat }}</a>
+        <a mat-list-item [routerLink]="['product', cat]">{{ cat }}</a>
       } @empty {
-      <a mat-list-item>No categories yet!</a>
+        <a mat-list-item>No categories yet!</a>
       }
       <a mat-list-item [routerLink]="['cart']">View Cart</a>
       <a mat-list-item [routerLink]="['orders']">View Orders</a>
@@ -22,16 +22,33 @@
   <mat-sidenav-content>
     <mat-toolbar color="primary">
       @if (isHandset$ | async) {
-      <button
-        type="button"
-        aria-label="Toggle sidenav"
-        mat-icon-button
-        (click)="drawer.toggle()"
-      >
-        <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
-      </button>
+        <button
+          type="button"
+          aria-label="Toggle sidenav"
+          mat-icon-button
+          (click)="drawer.toggle()"
+        >
+          <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
+        </button>
       }
       <span>e-commerce</span>
+      <button
+        mat-icon-button
+        [matMenuTriggerFor]="menu"
+        aria-label="Example icon-button with a menu"
+      >
+        <mat-icon>account_circle</mat-icon>
+      </button>
+      <mat-menu #menu="matMenu">
+        <button routerLink="profile" mat-menu-item>
+          <mat-icon>face_5</mat-icon>
+          <span>Profile</span>
+        </button>
+        <button mat-menu-item>
+          <mat-icon>logout</mat-icon>
+          <span>Logout</span>
+        </button>
+      </mat-menu>
     </mat-toolbar>
     <router-outlet></router-outlet>
   </mat-sidenav-content>
